8183
In 2.10 your example fails correctly. I expect the other one does as well.
{noformat}
<console>:9: error: constructor Result in class Result cannot be accessed in class Ok
         case class Ok() extends Result(1, true)
                      ^
{noformat}
